--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-   
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
+
     <title>Proffy</title>
   </head>
   <body>
